Fixes surrounding tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,7 @@ MAKEFLAGS += --no-builtin-rules
 
 .PHONY: test unit flow tck test_valgrind clean
 
-test: flow
+test: unit flow tck
 
 unit:
 	### unit tests
@@ -15,8 +15,6 @@ ifeq ($(V),)
 	@python -m unittest discover -b
 else
 	@python -m unittest discover --verbose
-	# @python -m unittest discover --verbose -p test_social.py
-	# @python -m unittest discover --verbose -p test_variable_length_traversals.py
 endif
 
 tck:
