--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -11,7 +11,7 @@ CPPFLAGS += -isystem $(GTEST_DIR)/include
 
 # Flags passed to the C++ compiler.
 CXXFLAGS += -g -Wall -Wextra -pthread -std=c++11
-CXX_SUPPRESS = -Wno-sign-compare -Wno-format -Wno-write-strings
+CXX_SUPPRESS = -Wno-unused-function -Wno-sign-compare -Wno-format -Wno-write-strings
 
 REDISGRAPH_CXX=$(QUIET_CXX)$(CXX)
 
