Rename parser directory

--- a/src/Makefile
+++ b/src/Makefile
@@ -45,7 +45,7 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/GraphBLASExt/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/grouping/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/index/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/parser/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/ast/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/resultset/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/schema/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/util/*.c)
