--- a/src/Makefile
+++ b/src/Makefile
@@ -70,6 +70,7 @@ CC_DEPS = $(patsubst %.c, %.d, $(CC_SOURCES) )
 LIBTRIEMAP=util/triemap/libtriemap.a
 GRAPHBLAS=../deps/GraphBLAS/build/libgraphblas.a
 LIBXXHASH=../deps/xxhash/libxxhash.a
+LIBCYPHER-PARSER=../deps/libcypher-parser/lib/src/.libs/libcypher-parser.a
 
 # Compilation deps for the module
 LIBS=$(LIBTRIEMAP) $(GRAPHBLAS) $(LIBXXHASH) $(LIBCYPHER-PARSER)
@@ -119,7 +120,7 @@ ifeq (,$(wildcard $(LIBCYPHER-PARSER)))
 	# Note we're passing empty CFLAGS to libcypher-parser.
 	cd ../deps/libcypher-parser; \
 	./autogen.sh; \
-	./configure;
+	./configure --disable-shared;
 	$(MAKE) CFLAGS="-fPIC" clean check -C ../deps/libcypher-parser
 endif
 .PHONY: $(LIBCYPHER-PARSER)
