--- a/src/Makefile
+++ b/src/Makefile
@@ -60,7 +60,8 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/util/datablock/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/util/thpool/*.c)
 
 CC_SOURCES += $(wildcard $(SOURCEDIR)/resultset_cache/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/resultset_cache/*/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/cache/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/cache/*/*.c)
 
 # Convert all sources to .o files
 CC_OBJECTS = $(patsubst %.c, %.o, $(CC_SOURCES) )
