--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,23 +5,50 @@ jobs:
       - image: 'redislabsmodules/rmbuilder:latest'
     steps:
       - checkout
+      
       - run:
           name: Install prerequisite
           command: >-
             pip install git+https://github.com/RedisGraph/redisgraph-py.git &&
             pip install behave backports.csv &&
             apt-get update; apt-get install -y automake peg libtool autoconf cmake
+      
+      # Load GraphBLAS from cache if possible.
+      - restore_cache:
+          keys:
+          - GraphBLAS-{{checksum "./deps/GraphBLAS/README.md"}}
+      
+      # Load libcypher-parser from cache if possible.
+      - restore_cache:
+          keys:
+          - libcypher-parser-{{checksum "./deps/libcypher-parser/linter/src/cypher-lint.c"}}
+
       - run:
           name: Build
           command: make
+      
+      # Save GraphBLAS to cache.
+      - save_cache:
+          paths:
+            - deps/GraphBLAS
+          key: GraphBLAS-{{checksum "./deps/GraphBLAS/README.md"}}
+      
+      # Save libcypher-parser to cache.
+      - save_cache:
+          paths:
+            - deps/libcypher-parser
+          key: libcypher-parser-{{checksum "./deps/libcypher-parser/linter/src/cypher-lint.c"}}
+
       - run:
           name: Test
           command: make test
+      
       - run:
           name: Persist Artifacts
           command: >-
             mkdir -p /workspace/build && cp src/$MODULE_ARTIFACT /workspace/ &&
             cp ramp.yml /workspace/
+      
       - persist_to_workspace:
           root: /workspace
           paths:
