--- a/src/Makefile
+++ b/src/Makefile
@@ -53,6 +53,7 @@ CC_SOURCES += $(SOURCEDIR)/parser/ast_arithmetic_expression.c
 CC_SOURCES += $(SOURCEDIR)/parser/lex.yy.c
 CC_SOURCES += $(SOURCEDIR)/parser/grammar.c
 CC_SOURCES += $(wildcard $(SOURCEDIR)/resultset/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/resultset/formatters/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/schema/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/procedures/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/util/*.c)
