changed flow test to RLTest framework

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           command: >-
             pip install git+https://github.com/RedisGraph/redisgraph-py.git &&
             pip install behave backports.csv &&
+            pip install git+https://github.com/RedisLabsModules/RLTest.git@master &&
             apt-get update; apt-get install -y automake peg libtool autoconf cmake
       
       # Load GraphBLAS from cache if possible.
