renamed lib name

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -48,11 +48,11 @@ gtest_main.a : gtest-all.o gtest_main.o
 CC_OBJECTS:=$(CC_OBJECTS)
 RAX=../../deps/rax/rax.o
 LIBTRIEMAP=../../src/util/triemap/libtriemap.a
-LIBLAGRAPH=../../deps/LAGraph/build/liblagraph.a
-LIBGRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
+LAGRAPH=../../deps/LAGraph/build/liblagraph.a
+GRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
 LIBXXHASH=$(ROOT)/deps/xxhash/libxxhash.a
 
-LIBS=$(LIBTRIEMAP) $(LIBGRAPHBLAS) $(LIBLAGRAPH) $(LIBXXHASH)
+LIBS=$(LIBTRIEMAP) $(GRAPHBLAS) $(LAGRAPH) $(LIBXXHASH)
 DEPS=$(CC_OBJECTS) $(RAX) $(LIBS)
 
 
