changed according to PR comments

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,8 @@ jobs:
           name: Install prerequisite
           command: >-
             pip install git+https://github.com/RedisGraph/redisgraph-py.git &&
-            pip install behave backports.csv &&
+            pip install psutil behave backports.csv && 
             pip install redis-py-cluster &&
-            pip install psutil &&
             pip install git+https://github.com/RedisLabsModules/RLTest.git@master &&
             apt-get update; apt-get install -y automake peg libtool autoconf cmake valgrind
       
@@ -44,7 +43,7 @@ jobs:
 
       - run:
           name: Test
-          command: make test VALGRIND=1
+          command: make test
       
       - run:
           name: Persist Artifacts
