--- a/tests/tck/Makefile
+++ b/tests/tck/Makefile
@@ -8,9 +8,7 @@ ifneq ($(V),)
 endif
 
 # check environment flag
-ifeq ($(ENV),)
-	
-else
+ifneq ($(ENV),)
 	TEST_ARGS += --env $(ENV)
 endif
 
@@ -40,7 +38,7 @@ ifeq ($(VALGRIND),)
 	@python -m RLTest --module ../../src/redisgraph.so  $(TEST_ARGS)
 else
 	# valgrind in docker
-	@echo running docker to run valgrind flow test on MacOS
-	@docker run -ti  mac_os_test_docker bash -c "cd tests/flow/; RLTest --module ../../src/redisgraph.so $(TEST_ARGS)"
+	@echo running docker to run valgrind tck test on MacOS
+	@docker run -ti  mac_os_test_docker bash -c "cd tests/tck; RLTest --module ../../src/redisgraph.so $(TEST_ARGS)"
 endif
 endif
