changed flow test to RLTest framework (#540)
* changed flow test to RLTest framework

* modified circleCI

* added docker creation with valgrind for mac

* added valgrind flow test to circleCI

* wrapped TCK tests with RLTests environment

* changed according to PR comments

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,10 @@ jobs:
           name: Install prerequisite
           command: >-
             pip install git+https://github.com/RedisGraph/redisgraph-py.git &&
-            pip install behave backports.csv &&
-            apt-get update; apt-get install -y automake peg libtool autoconf cmake
+            pip install psutil behave backports.csv && 
+            pip install redis-py-cluster &&
+            pip install git+https://github.com/RedisLabsModules/RLTest.git@master &&
+            apt-get update; apt-get install -y automake peg libtool autoconf cmake valgrind
       
       # Load GraphBLAS from cache if possible.
       - restore_cache:
