--- a/tests/Makefile
+++ b/tests/Makefile
@@ -11,18 +11,11 @@ unit:
 
 flow:
 	### flow tests
-ifeq ($(V),)
-	@python -m unittest discover -b
-else
-	@python -m unittest discover --verbose
-endif
+	@$(MAKE) -C flow
 
 tck:
 	### Cypher Technology Compatibility Kit (TCK)
 	@$(MAKE) -C tck
-
-test_valgrind:
-	@$(MAKE) -C unit test_valgrind
 
 clean:
 	@find . -name '*.[oad]' -type f -delete
