--- a/tests/flow/Makefile
+++ b/tests/flow/Makefile
@@ -25,7 +25,6 @@ else
 	OS = Mac
 endif
 
-
 test:
 # if host is linux
 ifeq ($(OS), Linux)
@@ -38,7 +37,7 @@ ifeq ($(VALGRIND),)
 	@python -m RLTest --module ../../src/redisgraph.so  $(TEST_ARGS)
 else
 	# valgrind in docker
-	@echo running docker to run valgrind tck test on MacOS
-	@docker run -ti  mac_os_test_docker bash -c "cd tests/tck; RLTest --module ../../src/redisgraph.so $(TEST_ARGS)"
+	@echo running docker to run valgrind flow test on MacOS
+	@docker run -ti  mac_os_test_docker bash -c "cd tests/flow/; RLTest --module ../../src/redisgraph.so $(TEST_ARGS)"
 endif
 endif
