Force parser header inclusion

--- a/src/Makefile
+++ b/src/Makefile
@@ -121,8 +121,7 @@ ifeq (,$(wildcard $(LIBCYPHER-PARSER)))
 	cd ../deps/libcypher-parser; \
 	./autogen.sh; \
 	./configure --disable-shared;
-	# TODO remove -g flag for production use
-	$(MAKE) CFLAGS="-g -fPIC" clean check -C ../deps/libcypher-parser
+	$(MAKE) CFLAGS="-fPIC" clean check -C ../deps/libcypher-parser
 endif
 .PHONY: $(LIBCYPHER-PARSER)
 
