--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -47,12 +47,13 @@ gtest_main.a : gtest-all.o gtest_main.o
 # RedisGraph flags and libraries
 CC_OBJECTS:=$(CC_OBJECTS)
 RAX=../../deps/rax/rax.o
-LIBTRIEMAP=../../src/util/triemap/libtriemap.a
-LIBGRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
 LIBXXHASH=$(ROOT)/deps/xxhash/libxxhash.a
-
+LIBTRIEMAP=../../src/util/triemap/libtriemap.a
+REDISEARCH=../../deps/RediSearch/build/libredisearchS.a
+LIBGRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
 LIBCYPHER-PARSER=../../deps/libcypher-parser/lib/src/.libs/libcypher-parser.a
-LIBS=$(LIBTRIEMAP) $(LIBGRAPHBLAS) $(LIBXXHASH) $(LIBCYPHER-PARSER)
+
+LIBS=$(LIBTRIEMAP) $(LIBGRAPHBLAS) $(REDISEARCH) $(LIBXXHASH) $(LIBCYPHER-PARSER)
 DEPS=$(CC_OBJECTS) $(RAX) $(LIBS)
 
 # Build and run a test for each cpp file in directory
