--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -8,6 +8,7 @@ GTEST_DIR = ../../deps/googletest
 # Set Google Test's header directory as a system directory, such that
 # the compiler doesn't generate warnings in Google Test headers.
 CPPFLAGS += -isystem $(GTEST_DIR)/include
+LDFLAGS += -ldl
 
 # Flags passed to the C++ compiler.
 CXXFLAGS += -g -Wall -Wextra -pthread -std=c++11
