--- a/.astylerc
+++ b/.astylerc
@@ -9,11 +9,16 @@
 --align-pointer=name
 --max-code-length=80
 --break-after-logical
-
 --preserve-date
-
---recursive
+--suffix=none
 --exclude=demo
 --exclude=deps
 --exclude=docs
 --exclude=tests
+--exclude=src/util
+--exclude=src/redismodule.h
+--exclude=src/redisearch_api.h
+--exclude=src/parser/grammar.c
+--exclude=src/parser/lemon.c
+--exclude=src/parser/lempar.c
+--exclude=src/parser/lex.yy.c
