Minimum conditional indent

--- a/.astylerc
+++ b/.astylerc
@@ -9,6 +9,7 @@
 --align-pointer=name
 --max-code-length=100
 --max-continuation-indent=80
+--min-conditional-indent=0
 --break-after-logical
 --preserve-date
 --suffix=none
