--- a/src/Makefile
+++ b/src/Makefile
@@ -43,6 +43,9 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/filter_tree/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/entities/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/encoder/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/prev/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/GraphBLASExt/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/grouping/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/index/*.c)
