after PR comments. no changes to op unwind yet. introduced edge and node ToString function

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             pip install git+https://github.com/RedisGraph/redisgraph-py.git@array_support &&
             pip install psutil behave backports.csv && 
             pip install redis-py-cluster &&
-            pip install git+https://github.com/RedisLabsModules/RLTest.git@3550ba5e772773a157bce776eef8d8ca3efee3dc &&
+            pip install git+https://github.com/RedisLabsModules/RLTest.git@master &&
             apt-get update; apt-get install -y automake peg libtool autoconf cmake valgrind astyle
 
       # Validate source complies with formatting
