--- a/src/Makefile
+++ b/src/Makefile
@@ -46,6 +46,7 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/encoder/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/prev/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/prev/*/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/GraphBLASExt/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/grouping/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/index/*.c)
