Update RediSearch version

--- a/deps/RediSearch/src/pytest/CMakeLists.txt
+++ b/deps/RediSearch/src/pytest/CMakeLists.txt
@@ -1,6 +1,14 @@
 # Find all the Python files with test_* in them
+
+IF (NOT RS_TEST_MODULE_SO)
+    SET(RS_TEST_MODULE_SO $<TARGET_FILE:redisearch>)
+ENDIF()
+IF (RS_VERBOSE_TESTS)
+    LIST(APPEND RS_TEST_ARGS "-s")
+ENDIF()
+
 FILE(GLOB PY_TEST_FILES "test*.py")
-SET(baseCommand "${CMAKE_CURRENT_SOURCE_DIR}/runtests.sh;--module=$<TARGET_FILE:redisearch>")
+SET(baseCommand "${CMAKE_CURRENT_SOURCE_DIR}/runtests.sh;--module=${RS_TEST_MODULE_SO};${RS_TEST_ARGS}")
 
 FOREACH(n ${PY_TEST_FILES})
     GET_FILENAME_COMPONENT(test_name ${n} NAME_WE)
