--- a/deps/RediSearch/docker/Dockerfile
+++ b/deps/RediSearch/docker/Dockerfile
@@ -9,7 +9,11 @@ RUN set -ex;\
     rm -rf docker-build; \
     mkdir docker-build; \
     cd docker-build; \
-    cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo ../ -DGIT_DESCRIBE_VERSION="$GIT_DESCRIBE_VERSION" -DRS_RUN_TESTS=ON; \
+    cmake \
+        -DCMAKE_BUILD_TYPE=RelWithDebInfo ../ \
+        -DGIT_DESCRIBE_VERSION="$GIT_DESCRIBE_VERSION" \
+        -DRS_RUN_TESTS=ON \
+        -DRS_VERBOSE_TESTS=ON; \
     make -j4; \
     pip install git+https://github.com/RedisLabsModules/RLTest; \
     pip install redis-py-cluster; \
