circle init submodules

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,12 @@ jobs:
       - image: 'redislabsmodules/rmbuilder:latest'
     steps:
       - checkout
-      
+      - run:
+          name: Fetch submodules
+          command: >-
+            git submodule init &&
+            git submodule update
+
       - run:
           name: Install prerequisite
           command: >-
@@ -14,7 +19,7 @@ jobs:
             pip install redis-py-cluster &&
             pip install git+https://github.com/RedisLabsModules/RLTest.git@master &&
             apt-get update; apt-get install -y automake peg libtool autoconf cmake valgrind astyle
-      
+
       # Validate source complies with formatting
       #- run:
           # name: Formatting
