--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/libcypher-parser"]
 	path = deps/libcypher-parser
 	url = https://github.com/cleishm/libcypher-parser.git
+[submodule "deps/rax"]
+	path = deps/rax
+	url = https://github.com/antirez/rax.git
