--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -3,6 +3,7 @@ ROOT=../..
 
 # Path to Google Test source
 GTEST_DIR = ../../deps/googletest
+RAX_DIR = ../../deps/rax
 
 # Flags passed to the preprocessor.
 # Set Google Test's header directory as a system directory, such that
@@ -63,7 +64,7 @@ TEST_EXECUTABLES = $(patsubst %.cpp, %.run, $(TEST_SOURCES))
 
 # Compile object files from unit test sources
 %.o: %.cpp
-	@$(REDISGRAPH_CXX) $(CPPFLAGS) $(CXXFLAGS) $(CXX_SUPPRESS) -c -o $@ $<
+	@$(REDISGRAPH_CXX) $(CPPFLAGS) $(CXXFLAGS) $(CXX_SUPPRESS) -I$(RAX_DIR) -c -o $@ $<
 
 # Build '*.run' binaries for each source
 %.run: %.o gtest_main.a $(DEPS)
