add libcypher to include path

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,10 @@ uname_S := $(shell sh -c 'uname -s 2>/dev/null || echo not')
 # store absolute path to RedisGraph Makefile location
 abs_path = $(shell pwd)
 
+# Paths to deps.
+RAX_DIR = ../deps/rax
+LIBCYPHER-PARSER_DIR = ../deps/libcypher-parser/lib/src
+
 # if DEBUG env var is set, we compile with "debug" cflags
 DEBUGFLAGS = -g -ggdb -O3 
 ifeq ($(DEBUG), 1)
@@ -93,7 +97,7 @@ endif
 # Compile C file while generating a .d file for it
 %.o: %.c
 %.o: %.c
-	$(REDISGRAPH_CC) $(CFLAGS) -I../deps/rax -c $< -o $@ -MMD -MF $(@:.o=.d)
+	$(REDISGRAPH_CC) $(CFLAGS) -I$(RAX_DIR) -I$(LIBCYPHER-PARSER_DIR) -c $< -o $@ -MMD -MF $(@:.o=.d)
 
 all: redisgraph.so
 
