--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/xxHash"]
 	path = deps/xxHash
 	url = https://github.com/Cyan4973/xxHash.git
+[submodule "deps/RediSearch"]
+	path = deps/RediSearch
+	url = https://github.com/RediSearch/RediSearch.git
