--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "deps/RediSearch"]
 	path = deps/RediSearch
 	url = https://github.com/RediSearch/RediSearch.git
+[submodule "deps/googletest"]
+	path = deps/googletest
+	url = https://github.com/google/googletest.git
