--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -51,7 +51,7 @@ gtest_main.a : gtest-all.o gtest_main.o
 # RedisGraph flags and libraries
 CC_OBJECTS:=$(CC_OBJECTS)
 RAX=../../deps/rax/rax.o
-LIBXXHASH=$(ROOT)/deps/xxhash/libxxhash.a
+LIBXXHASH=$(ROOT)/deps/xxHash/libxxhash.a
 REDISEARCH=../../deps/RediSearch/build/libredisearch.a
 LIBGRAPHBLAS=../../deps/GraphBLAS/build/libgraphblas.a
 LIBCYPHER-PARSER=../../deps/libcypher-parser/lib/src/.libs/libcypher-parser.a
